// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Markdown parser eats multiple empty lines at end 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        "end",
      ],
      "type": "text-block",
    },
  ],
  "type": "markup",
}
`;

exports[`Markdown parser eats multiple empty lines at start 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        "start",
      ],
      "type": "text-block",
    },
  ],
  "type": "markup",
}
`;

exports[`Markdown parser parses a line with just whitespace correctly 1`] = `
Object {
  "children": Array [],
  "type": "markup",
}
`;

exports[`Markdown parser parses a single delimiter correctly 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        ".",
      ],
      "type": "text-block",
    },
  ],
  "type": "markup",
}
`;

exports[`Markdown parser parses an empty line correctly 1`] = `
Object {
  "children": Array [],
  "type": "markup",
}
`;

exports[`Markdown parser parses escaped chars correctly 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        "I *should* see asterisks",
      ],
      "type": "text-block",
    },
  ],
  "type": "markup",
}
`;

exports[`Markdown parser parses formatting adjacent to punctuation 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        "thisis(",
        Object {
          "children": Array [
            "bold",
          ],
          "type": "bold",
        },
        ") and(",
        Object {
          "children": Array [
            "italic",
          ],
          "type": "italic",
        },
        ") and,",
        Object {
          "children": Array [
            "striked",
          ],
          "type": "strike",
        },
        "! (",
        Object {
          "children": Array [
            "woot",
          ],
          "type": "bold",
        },
        ") another.",
        Object {
          "children": Array [
            "test",
          ],
          "type": "bold",
        },
        ".case",
      ],
      "type": "text-block",
    },
  ],
  "type": "markup",
}
`;

exports[`Markdown parser parses incomplete code blocks correctly 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        "\`",
      ],
      "type": "text-block",
    },
  ],
  "type": "markup",
}
`;

exports[`Markdown parser parses incomplete code blocks correctly 2`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        "\`\`",
      ],
      "type": "text-block",
    },
  ],
  "type": "markup",
}
`;

exports[`Markdown parser parses incomplete code blocks correctly 3`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        "\`\`\`",
      ],
      "type": "text-block",
    },
  ],
  "type": "markup",
}
`;

exports[`Markdown parser parses incomplete code blocks correctly 4`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        "\`\`\`\`",
      ],
      "type": "text-block",
    },
  ],
  "type": "markup",
}
`;

exports[`Markdown parser parses incomplete code blocks correctly 5`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        "\`\`\`\`\`",
      ],
      "type": "text-block",
    },
  ],
  "type": "markup",
}
`;

exports[`Markdown parser parses incomplete code blocks correctly 6`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        "\`\`\`\`\`\`",
      ],
      "type": "text-block",
    },
  ],
  "type": "markup",
}
`;

exports[`Markdown parser parses incomplete code blocks correctly 7`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        "\`\`\`\`\`\`\`",
      ],
      "type": "text-block",
    },
  ],
  "type": "markup",
}
`;

exports[`Markdown parser parses invalid bold correctly 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        "*not bold**",
      ],
      "type": "text-block",
    },
  ],
  "type": "markup",
}
`;

exports[`Markdown parser parses invalid emoji fragments correctly 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        "one::",
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "::two",
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        ":three?::",
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        ":",
        Object {
          "children": Array [
            ":four:",
          ],
          "type": "emoji",
        },
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "::",
      ],
      "type": "text-block",
    },
  ],
  "type": "markup",
}
`;

exports[`Markdown parser parses kitchen sink demo correctly 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        "I think we should try to use ",
        Object {
          "children": Array [
            "if else",
          ],
          "type": "inline-code",
        },
        " statements ",
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "if (var == \\"foo\\")
  echo \\"foo\\";
else echo \\"bar\\";",
      ],
      "type": "code-block",
    },
    Object {
      "children": Array [
        " How about ",
        Object {
          "children": Array [
            "bold",
          ],
          "type": "bold",
        },
        " and ",
        Object {
          "children": Array [
            "italic?",
          ],
          "type": "italic",
        },
        " nice.",
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        " Now youre thinking with ",
        Object {
          "children": Array [
            "portals",
          ],
          "type": "strike",
        },
        " crypto.",
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        " how about ",
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    "bold and italic and strike through?",
                  ],
                  "type": "bold",
                },
              ],
              "type": "italic",
            },
          ],
          "type": "strike",
        },
        " - now - ",
        Object {
          "children": Array [
            Object {
              "children": Array [
                "some bold",
              ],
              "type": "bold",
            },
            " and just italic",
          ],
          "type": "italic",
        },
      ],
      "type": "text-block",
    },
  ],
  "type": "markup",
}
`;

exports[`Markdown parser parses more code blocks correctly 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        "this is a code block",
      ],
      "type": "code-block",
    },
    Object {
      "children": Array [
        "this is a code block that starts with a newline",
      ],
      "type": "code-block",
    },
    Object {
      "children": Array [
        "this is a code block that starts with a newline and ends with a newline
",
      ],
      "type": "code-block",
    },
    Object {
      "children": Array [
        "
this is a code block with two newline above",
      ],
      "type": "code-block",
    },
  ],
  "type": "markup",
}
`;

exports[`Markdown parser parses multiple adjacent emoji correctly 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            ":ok_hand::skin-tone-2:",
          ],
          "type": "emoji",
        },
        Object {
          "children": Array [
            ":smile:",
          ],
          "type": "emoji",
        },
        Object {
          "children": Array [
            ":wink:",
          ],
          "type": "emoji",
        },
      ],
      "type": "text-block",
    },
  ],
  "type": "markup",
}
`;

exports[`Markdown parser parses native emoji correctly 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        "hello there ",
        Object {
          "children": Array [
            ":cherry_blossom:",
          ],
          "type": "native-emoji",
        },
        Object {
          "children": Array [
            ":sunglasses:",
          ],
          "type": "native-emoji",
        },
        Object {
          "children": Array [
            ":+1::skin-tone-5:",
          ],
          "type": "native-emoji",
        },
        "!",
      ],
      "type": "text-block",
    },
  ],
  "type": "markup",
}
`;

exports[`Markdown parser parses native zwj emoji correctly 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            ":woman-kiss-woman:",
          ],
          "type": "native-emoji",
        },
        " ",
        Object {
          "children": Array [
            ":woman-woman-girl-girl:",
          ],
          "type": "native-emoji",
        },
        "!",
      ],
      "type": "text-block",
    },
  ],
  "type": "markup",
}
`;

exports[`Markdown parser parses numbers and some symbols emoji 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            ":+1:",
          ],
          "type": "emoji",
        },
        " ",
        Object {
          "children": Array [
            ":100:",
          ],
          "type": "emoji",
        },
      ],
      "type": "text-block",
    },
  ],
  "type": "markup",
}
`;

exports[`Markdown parser parses plaintext correctly 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        "hello, there! how are you? this shouldn't be markdown.",
      ],
      "type": "text-block",
    },
  ],
  "type": "markup",
}
`;

exports[`Markdown parser parses quote blocks correctly 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            "this is quoted",
          ],
          "type": "text-block",
        },
      ],
      "type": "quote-block",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            "this is ",
            Object {
              "children": Array [
                "italics",
              ],
              "type": "italic",
            },
            " inside of a quote. This is ",
            Object {
              "children": Array [
                "bold",
              ],
              "type": "bold",
            },
            " inside of a quote.",
          ],
          "type": "text-block",
        },
      ],
      "type": "quote-block",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            "outside code: ",
            Object {
              "children": Array [
                "This is an inline block of code in a quote",
              ],
              "type": "inline-code",
            },
            " outside again",
          ],
          "type": "text-block",
        },
      ],
      "type": "quote-block",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            "multi
line
code in quote
",
          ],
          "type": "code-block",
        },
      ],
      "type": "quote-block",
    },
  ],
  "type": "markup",
}
`;

exports[`Markdown parser parses special characters within words correctly 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        "not*bolded* *also*notbolded",
      ],
      "type": "text-block",
    },
  ],
  "type": "markup",
}
`;

exports[`Markdown parser parses urls correctly 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        "Ignore:",
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "    a...b,",
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "    ftp://blah.com,",
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "    gopher://blah.com,",
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "    mailto:blah@blah.com",
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "    okay.json",
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "    okay.png",
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "  Include:",
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "    ",
        Object {
          "children": Array [
            "http://keybase.io",
          ],
          "href": "http://keybase.io",
          "type": "link",
        },
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "    ",
        Object {
          "children": Array [
            "http://keybase.io/",
          ],
          "href": "http://keybase.io/",
          "type": "link",
        },
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "    ",
        Object {
          "children": Array [
            Object {
              "children": Array [
                "http://keybase.io",
              ],
              "href": "http://keybase.io",
              "type": "link",
            },
          ],
          "type": "bold",
        },
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "    ",
        Object {
          "children": Array [
            Object {
              "children": Array [
                "http://keybase.io/~test",
              ],
              "href": "http://keybase.io/~test",
              "type": "link",
            },
          ],
          "type": "bold",
        },
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "    ",
        Object {
          "children": Array [
            Object {
              "children": Array [
                "http://keybase.io",
              ],
              "href": "http://keybase.io",
              "type": "link",
            },
          ],
          "type": "italic",
        },
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "    ",
        Object {
          "children": Array [
            Object {
              "children": Array [
                "http://keybase.io",
              ],
              "href": "http://keybase.io",
              "type": "link",
            },
          ],
          "type": "strike",
        },
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "    ",
        Object {
          "children": Array [
            "http://keybase.io",
          ],
          "type": "inline-code",
        },
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "    (",
        Object {
          "children": Array [
            "https://keybase.io",
          ],
          "href": "https://keybase.io",
          "type": "link",
        },
        ")",
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "    ",
        Object {
          "children": Array [
            "https://keybase.io",
          ],
          "href": "https://keybase.io",
          "type": "link",
        },
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "    ",
        Object {
          "children": Array [
            "HTTP://cnn.com",
          ],
          "href": "HTTP://cnn.com",
          "type": "link",
        },
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "    ",
        Object {
          "children": Array [
            "http://twitter.com",
          ],
          "href": "http://twitter.com",
          "type": "link",
        },
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "    ",
        Object {
          "children": Array [
            "google.com",
          ],
          "href": "http://google.com",
          "type": "link",
        },
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "    ",
        Object {
          "children": Array [
            "keybase.io/a/user/lookup?one=1&two=2",
          ],
          "href": "http://keybase.io/a/user/lookup?one=1&two=2",
          "type": "link",
        },
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "    ",
        Object {
          "children": Array [
            "keybase.io/a/user/path_with_underscore",
          ],
          "href": "http://keybase.io/a/user/path_with_underscore",
          "type": "link",
        },
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "    ",
        Object {
          "children": Array [
            "keybase.io?blah=true",
          ],
          "href": "http://keybase.io?blah=true",
          "type": "link",
        },
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "    ",
        Object {
          "children": Array [
            "keybase.io/~user/cool",
          ],
          "href": "http://keybase.io/~user/cool",
          "type": "link",
        },
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "    ",
        Object {
          "children": Array [
            "http://keybase.io/blah/../up-one/index.html",
          ],
          "href": "http://keybase.io/blah/../up-one/index.html",
          "type": "link",
        },
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "    ",
        Object {
          "children": Array [
            "wikipedia.org/hello_(world)_(okay)",
          ],
          "href": "http://wikipedia.org/hello_(world)_(okay)",
          "type": "link",
        },
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "    ",
        Object {
          "children": Array [
            "json.org/image.json",
          ],
          "href": "http://json.org/image.json",
          "type": "link",
        },
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "    ",
        Object {
          "children": Array [
            "trailing.com/trail#!t",
          ],
          "href": "http://trailing.com/trail#!t",
          "type": "link",
        },
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "    ",
        Object {
          "children": Array [
            "commas.net/a,b,c,d",
          ],
          "href": "http://commas.net/a,b,c,d",
          "type": "link",
        },
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "    ",
        Object {
          "children": Array [
            "https://www.google.com/search?q=full+circle+bar&oq=full+circle+bar&aqs=chrome..69i57j0j69i60l3j69i61.2262j0j7&sourceid=chrome&ie=UTF-8",
          ],
          "href": "https://www.google.com/search?q=full+circle+bar&oq=full+circle+bar&aqs=chrome..69i57j0j69i60l3j69i61.2262j0j7&sourceid=chrome&ie=UTF-8",
          "type": "link",
        },
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "    ",
        Object {
          "children": Array [
            "https://github.com/keybase/client/compare/master...miles/team-test",
          ],
          "href": "https://github.com/keybase/client/compare/master...miles/team-test",
          "type": "link",
        },
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "    ",
        Object {
          "children": Array [
            "https://www.google.com/maps/place/207+Union+Tpke,+Hollis+Hills,+NY+11364/@40.7296274,-73.8891088,13z/data=!4m21!1m15!4m14!1m6!1m2!1s0x89c25944285c8d37:0xec514da3903a76f8!2s99+Norman+Avenue,+Brooklyn,+NY+11222,+USA!2m2!1d-73.9512991!2d40.7257587!1m6!1m2!1s0x89c2619a6e18c11f:0xa90d5492c8d767a0!2s207+Union+Tpke,+Hollis+Hills,+NY+11364!2m2!1d-73.7635942!2d40.7331327!3m4!1s0x89c2619a6e18c11f:0xa90d5492c8d767a0!8m2!3d40.7331327!4d-73.7635942",
          ],
          "href": "https://www.google.com/maps/place/207+Union+Tpke,+Hollis+Hills,+NY+11364/@40.7296274,-73.8891088,13z/data=!4m21!1m15!4m14!1m6!1m2!1s0x89c25944285c8d37:0xec514da3903a76f8!2s99+Norman+Avenue,+Brooklyn,+NY+11222,+USA!2m2!1d-73.9512991!2d40.7257587!1m6!1m2!1s0x89c2619a6e18c11f:0xa90d5492c8d767a0!2s207+Union+Tpke,+Hollis+Hills,+NY+11364!2m2!1d-73.7635942!2d40.7331327!3m4!1s0x89c2619a6e18c11f:0xa90d5492c8d767a0!8m2!3d40.7331327!4d-73.7635942",
          "type": "link",
        },
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "    ",
        Object {
          "children": Array [
            "https://www.google.com/maps/@37.811065,-122.4770798,3a,75y,346.55h,93.26t/data=!3m8!1e1!3m6!1s-cLDS636PtKU%2FVTx5N5EPNEI%2FAAAAAAAAChw%2FrgTinSxtV2kMWucPvTg17jfwRFq9NQeYACJkC!2e4!3e11!6s%2F%2Flh6.googleusercontent.com%2F-cLDS636PtKU%2FVTx5N5EPNEI%2FAAAAAAAAChw%2FrgTinSxtV2kMWucPvTg17jfwRFq9NQeYACJkC%2Fw203-h100-k-no-pi-0-ya143.44029-ro0-fo100%2F!7i10240!8i5120",
          ],
          "href": "https://www.google.com/maps/@37.811065,-122.4770798,3a,75y,346.55h,93.26t/data=!3m8!1e1!3m6!1s-cLDS636PtKU%2FVTx5N5EPNEI%2FAAAAAAAAChw%2FrgTinSxtV2kMWucPvTg17jfwRFq9NQeYACJkC!2e4!3e11!6s%2F%2Flh6.googleusercontent.com%2F-cLDS636PtKU%2FVTx5N5EPNEI%2FAAAAAAAAChw%2FrgTinSxtV2kMWucPvTg17jfwRFq9NQeYACJkC%2Fw203-h100-k-no-pi-0-ya143.44029-ro0-fo100%2F!7i10240!8i5120",
          "type": "link",
        },
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "    ",
        Object {
          "children": Array [
            "https://groups.google.com/forum/#!topic/golang-dev/1ZV7mIj_Du8",
          ],
          "href": "https://groups.google.com/forum/#!topic/golang-dev/1ZV7mIj_Du8",
          "type": "link",
        },
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "    ",
        Object {
          "children": Array [
            "https://en.wikipedia.org/wiki/Redshirt_(character)",
          ],
          "href": "https://en.wikipedia.org/wiki/Redshirt_(character)",
          "type": "link",
        },
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "    ",
        Object {
          "children": Array [
            "https://t.co",
          ],
          "href": "https://t.co",
          "type": "link",
        },
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "    ",
        Object {
          "children": Array [
            "https://g.co",
          ],
          "href": "https://g.co",
          "type": "link",
        },
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "    ",
        Object {
          "children": Array [
            "trailing.com/trail...t",
          ],
          "href": "http://trailing.com/trail...t",
          "type": "link",
        },
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "    ",
        Object {
          "children": Array [
            "trailing.com/trail..t",
          ],
          "href": "http://trailing.com/trail..t",
          "type": "link",
        },
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "    ",
        Object {
          "children": Array [
            "trailing.com/trail.t",
          ],
          "href": "http://trailing.com/trail.t",
          "type": "link",
        },
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "  These should have the trailing punctuation outside the link:",
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "    ",
        Object {
          "children": Array [
            "trailing.com/trail",
          ],
          "href": "http://trailing.com/trail",
          "type": "link",
        },
        "...",
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "    ",
        Object {
          "children": Array [
            "trailing.com/trail",
          ],
          "href": "http://trailing.com/trail",
          "type": "link",
        },
        "..",
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "    ",
        Object {
          "children": Array [
            "trailing.com/trail",
          ],
          "href": "http://trailing.com/trail",
          "type": "link",
        },
        ".",
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "    ",
        Object {
          "children": Array [
            "commas.net/a,b,c,d",
          ],
          "href": "http://commas.net/a,b,c,d",
          "type": "link",
        },
        ",",
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "    ",
        Object {
          "children": Array [
            "trailing.com/trail#",
          ],
          "href": "http://trailing.com/trail#",
          "type": "link",
        },
        "!",
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "    ",
        Object {
          "children": Array [
            "wikipedia.org/hello_",
          ],
          "href": "http://wikipedia.org/hello_",
          "type": "link",
        },
        "(world",
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "    ",
        Object {
          "children": Array [
            "wikipedia.org/hello_(world)_",
          ],
          "href": "http://wikipedia.org/hello_(world)_",
          "type": "link",
        },
        "(okay",
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "    (",
        Object {
          "children": Array [
            "wikipedia.org/hello_(world)_",
          ],
          "href": "http://wikipedia.org/hello_(world)_",
          "type": "link",
        },
        "(okay",
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "    (",
        Object {
          "children": Array [
            "wikipedia.org/hello_(world)_(okay)",
          ],
          "href": "http://wikipedia.org/hello_(world)_(okay)",
          "type": "link",
        },
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "    (",
        Object {
          "children": Array [
            "wikipedia.org/hello_(world)_(okay)",
          ],
          "href": "http://wikipedia.org/hello_(world)_(okay)",
          "type": "link",
        },
        ")",
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "    ",
        Object {
          "children": Array [
            "amazon.co.uk",
          ],
          "href": "http://amazon.co.uk",
          "type": "link",
        },
        ".",
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "    ",
        Object {
          "children": Array [
            "keybase.io",
          ],
          "href": "http://keybase.io",
          "type": "link",
        },
        ",",
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "    ",
        Object {
          "children": Array [
            "keybase.io",
          ],
          "href": "http://keybase.io",
          "type": "link",
        },
        ".",
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "    ",
        Object {
          "children": Array [
            "keybase.io",
          ],
          "href": "http://keybase.io",
          "type": "link",
        },
        "?",
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "    ",
        Object {
          "children": Array [
            Object {
              "children": Array [
                "http://keybase.io/",
              ],
              "href": "http://keybase.io/",
              "type": "link",
            },
          ],
          "type": "bold",
        },
        ".",
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "    ",
        Object {
          "children": Array [
            Object {
              "children": Array [
                "http://keybase.io/",
              ],
              "href": "http://keybase.io/",
              "type": "link",
            },
            "~_",
          ],
          "type": "bold",
        },
      ],
      "type": "text-block",
    },
  ],
  "type": "markup",
}
`;

exports[`Markdown parser preserves multiple empty lines 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        "be",
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "   ",
      ],
      "type": "text-block",
    },
    Object {
      "children": Array [],
      "type": "text-block",
    },
    Object {
      "children": Array [
        "tween",
      ],
      "type": "text-block",
    },
  ],
  "type": "markup",
}
`;
